--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -13,7 +13,7 @@ on:
   #   branches:
   #     - main
   schedule:
-     - cron: 0 16 * * *
+     - cron: 0 8 * * 5
   workflow_dispatch:
   repository_dispatch:
 
