--- a/.config
+++ b/.config
@@ -7363,9 +7363,10 @@ CONFIG_DOCKER_OPTIONAL_FEATURES=y
 #
 # Network
 #
-# CONFIG_DOCKER_NET_OVERLAY is not set
+CONFIG_DOCKER_NET_OVERLAY=y
+# CONFIG_DOCKER_NET_ENCRYPT is not set
 CONFIG_DOCKER_NET_MACVLAN=y
-# CONFIG_DOCKER_NET_TFTP is not set
+CONFIG_DOCKER_NET_TFTP=y
 # end of Network
 
 #
@@ -7373,7 +7374,7 @@ CONFIG_DOCKER_NET_MACVLAN=y
 #
 # CONFIG_DOCKER_STO_DEVMAPPER is not set
 CONFIG_DOCKER_STO_EXT4=y
-# CONFIG_DOCKER_STO_BTRFS is not set
+CONFIG_DOCKER_STO_BTRFS=y
 # end of Storage
 
 # CONFIG_PACKAGE_domoticz is not set
