--- a/.github/workflows/Kernel by flippy and ower scripts.yml
+++ b/.github/workflows/Kernel by flippy and ower scripts.yml
@@ -37,12 +37,13 @@ jobs:
        # KERNEL_AUTO_LATEST: false
        # KERNEL_REPO_URL: https://github.com/tsingui/kernel/releases/tag/kernel_stable
         KERNEL_REPO_URL: https://github.com/breakings/OpenWrt/releases/tag/kernel_stable
-        KERNEL_VERSION_NAME: 5.4.260_6.6.20
+        KERNEL_VERSION_NAME: 5.15.160_6.1.100_6.6.60
 
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
       with:
-        tag: openwrt_armvirt_v8_${{ env.PACKAGED_OUTPUTDATE }}
+        # tag: openwrt_armvirt_v8_${{ env.PACKAGED_OUTPUTDATE }}
+        tag: openwrt_armvirt_v8_$(date +"%Y-%m-%d-%H-%M")
         artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         allowUpdates: true
         token: ${{ secrets.GITHUB_TOKEN }}
