--- a/.github/workflows/Kernel by flippy and ower scripts.yml
+++ b/.github/workflows/Kernel by flippy and ower scripts.yml
@@ -36,7 +36,8 @@ jobs:
         PACKAGE_SOC: s905d_s905x3
        # KERNEL_AUTO_LATEST: false
        # KERNEL_REPO_URL: https://github.com/tsingui/kernel/releases/tag/kernel_stable
-        KERNEL_REPO_URL: https://github.com/breakings/OpenWrt/releases/tag/kernel_stable
+       # KERNEL_REPO_URL: https://github.com/breakings/OpenWrt/releases/tag/kernel_stable
+        KERNEL_REPO_URL: https://github.com/ophub/kernel/releases/tag/kernel_stable
         KERNEL_VERSION_NAME: 5.15.160_6.1.100_6.6.60
 
     - name: Upload OpenWrt Firmware to Release
