--- a/.github/workflows/快速打包Kernel by ophub.yml
+++ b/.github/workflows/快速打包Kernel by ophub.yml
@@ -35,7 +35,7 @@ jobs:
        # KERNEL_AUTO_LATEST: false
        # KERNEL_REPO_URL: https://github.com/tsingui/kernel/releases/tag/kernel_stable
         KERNEL_REPO_URL: https://github.com/ophub/kernel/releases/tag/kernel_stable
-        KERNEL_VERSION_NAME: 5.15.60_6.1.3
+        KERNEL_VERSION_NAME: 5.4.260_6.1.80_6.6.20_6.12.18
 
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
