--- a/.github/workflows/快速打包Kernel by flippy.yml
+++ b/.github/workflows/快速打包Kernel by flippy.yml
@@ -50,6 +50,6 @@ jobs:
         body: |
           ### **适用于Amlogic平台OpenWrt固件**
           * **固件信息：**
-          默认IP: `10.57.21.2`
+          默认IP: `10.0.0.2`
           默认用户名: `root`
-          默认密码: `空`
+          默认密码: `password/空`
