--- a/.github/workflows/Kernel by flippy and ower scripts.yml
+++ b/.github/workflows/Kernel by flippy and ower scripts.yml
@@ -47,7 +47,7 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         # tag: openwrt_armvirt_v8_${{ env.PACKAGED_OUTPUTDATE }}
-        tag: ${{ steps.compile.outputs.build_tag }}
+        tag: ${{ steps.build.outputs.build_tag }}
         artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         allowUpdates: true
         token: ${{ secrets.GITHUB_TOKEN }}
