--- a/.github/workflows/s905x3.yml
+++ b/.github/workflows/s905x3.yml
@@ -4,7 +4,7 @@
 # Cron: min (0 - 59) / hour (0 - 23) / day of month (1 - 31) / month (1 - 12) / day of week (0 - 6)(Sunday - Saturday)
 #============================================================================================================
 
-name: Kernel by flippy and ower scripts
+name: s905x3
 
 on:
   repository_dispatch:
